# urme

./: .gitignore  .mcp.json  2026-04-21-214055-urme-v2-plan.txt  CLAUDE.md  LICENSE  Makefile  README.md  dune-project  experience_agent.opam  urme.opam
.github/workflows/: release.yml
docs/: urme-v2-plan.md
lib/: chromadb.ml  dune  git_ops.ml  mcp_server.ml  step_tracker.ml  types.ml
lib/claude/: dune  process.ml  prompts.ml  stream.ml
lib/core/: config.ml  dune  types.ml  usage.ml
lib/engine/: branch_diff.ml  branch_topo.ml  diff_match.ml  dune  edit_extract.ml  experience_ops.ml  git_index.ml  git_link.ml  git_link_types.ml  git_state.ml  git_walk.ml  indexer.ml  session_manager.ml  summarise.ml  walk_handlers.ml
lib/git/: dune  ops.ml
lib/github/: client.ml  dune  pr.ml
lib/mcp/: handlers.ml  server.ml  tools.ml
lib/search/: chromadb.ml  dune  fts.ml  jsonl_reader.ml  search.ml
lib/store/: db.ml  dune  edit_links.ml  export.ml  project_store.ml  schema.ml  session_store.ml
lib/tui/: app.ml  dune  history_view.ml  permission_server.ml  reactive.ml  session_view.ml
scripts/: setup.sh  start.sh  stop.sh
test/: dune  test_engine.ml  test_indexer.ml  test_prompts.ml  test_search.ml  test_summarise.ml
