opam-version: "2.0"
name: "experience_agent"
version: "0.1.0"
synopsis: "MCP server for experience replay in Claude Code"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0"}
  "yojson" {>= "2.0"}
  "cohttp-lwt-unix" {>= "5.0"}
  "lwt" {>= "5.6"}
  "uuidm" {>= "0.9"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
