opam-version: "2.0"
name: "urme"
version: "0.1.0"
synopsis: "OCaml CLI orchestration layer for Claude + GitHub"
maintainer: "corneliuhoffman@gmail.com"
authors: ["Corneliu Hoffman <corneliuhoffman@gmail.com>"]
license: "MIT"
homepage: "https://github.com/corneliuhoffman/experience-agent"
bug-reports: "https://github.com/corneliuhoffman/experience-agent/issues"
dev-repo: "git+https://github.com/corneliuhoffman/experience-agent.git"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0"}
  "yojson" {>= "2.0"}
  "cohttp-lwt-unix" {>= "5.0"}
  "lwt" {>= "5.6"}
  "uuidm" {>= "0.9"}
  "irmin-git" {>= "3.6"}
  "cmdliner" {>= "1.2"}
  "notty" {>= "0.2"}
  "patch" {>= "3.1"}
  "domainslib" {>= "0.5"}
  "conf-libev"
  "sqlite3" {>= "5.0"}
  "ocamlgraph" {>= "2.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
